# kytok.org.ua-CMake-intro-article-resources

./: CMakeLists.txt  README.md
src/: main.cpp
